[gd_scene load_steps=8 format=2]

[ext_resource path="res://Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/select.wav" type="AudioStream" id=6]
[ext_resource path="res://Score.tscn" type="PackedScene" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Player1Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 250 )
player_id = 1
default_position = Vector2( 50, 250 )

[node name="Player2Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 750, 250 )
player_id = 2
default_position = Vector2( 750, 250 )

[node name="Ball" parent="." groups=[
"ball",
] instance=ExtResource( 3 )]
position = Vector2( 400, 250 )

[node name="TopWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 0 )

[node name="BottomWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 496 )

[node name="Player1Goal" parent="." instance=ExtResource( 5 )]
position = Vector2( -16, 0 )
player_id = 1

[node name="Player2Goal" parent="." instance=ExtResource( 5 )]
position = Vector2( 816, 0 )
player_id = 2

[node name="StartAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Player1Score" parent="." instance=ExtResource( 7 )]
anchor_right = 10.0
margin_left = 312.0
margin_top = 50.0
margin_right = 352.0
margin_bottom = 82.0
player_id = 1

[node name="Player2Score" parent="." instance=ExtResource( 7 )]
margin_left = 448.0
margin_top = 50.0
margin_right = 488.0
margin_bottom = 82.0
align = 2
player_id = 2
[connection signal="goal_scored" from="Player1Goal" to="." method="_on_Goal_goal_scored"]
[connection signal="goal_scored" from="Player2Goal" to="." method="_on_Goal_goal_scored"]
